--- a/entrega4.html
+++ b/entrega4.html
@@ -19,9 +19,8 @@ div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
 ul.task-list{list-style: none;}
 ul.task-list li input[type="checkbox"] {
 width: 0.8em;
-margin: 0 0.8em 0.2em -1em;  vertical-align: middle;
+margin: 0 0.8em 0.2em -1em; vertical-align: middle;
 }
-
 pre > code.sourceCode { white-space: pre; position: relative; }
 pre > code.sourceCode > span { line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
@@ -55,7 +54,6 @@ div.sourceCode
 @media screen {
 pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
-
 div.csl-bib-body { }
 div.csl-entry {
 clear: both;
@@ -4340,250 +4338,7 @@ Varmuza, K., and P. Filzmoser. 2016. <em>Introduction to Multivariate Statistica
 
 
 
-<style>
-
-.sidebar-search {
-position: fixed;
-top: 20px;
-left: 20px;
-width: 200px;
-font-family: 'Segoe UI', system-ui, sans-serif;
-font-size: 13px;
-background: transparent !important;
-box-shadow: none !important;
-border: none !important;
-padding: 0 !important;
-z-index: 1000;
-}
-.search-logo { text-align:center; margin-bottom:8px; }
-.search-logo img { max-width:100%; height:auto; display:block; margin:0 auto; transition: transform 0.2s ease-out, filter 0.2s ease-out; background: transparent; }
-.search-divider { border-top:1px solid #ddd; margin:8px 0; }
-.dark-mode .search-divider {
-border-color: #555;
-}
-.search-and-nav {
-display: flex;
-align-items: stretch;
-gap: 4px;
-margin-bottom: 6px;
-}
-#searchBox {
-flex: 1;
-padding:8px 10px; font-size:13px; border:none;
-border-radius:8px;
-background:rgba(255,255,255,0.9); color:inherit; outline:none;
-transition: all 0.2s ease;
-box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-}
-.dark-mode #searchBox {
-background: rgba(0,0,0,0.3);
-}
-#searchBox:focus {
-box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-}
-.nav-buttons-vertical {
-display: flex;
-flex-direction: column;
-gap: 2px;
-}
-.nav-buttons-vertical button {
-border:none; background:rgba(245,245,245,0.9); padding:4px 6px; font-size:10px; border-radius:4px; cursor:pointer; color:#555;
-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-min-width: 28px;
-height: 22px;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-.nav-buttons-vertical button:hover {
-background:#e0e0e0; transform: translateY(-1px);
-}
-.dark-mode .nav-buttons-vertical {
-background: transparent;
-}
-.dark-mode .nav-buttons-vertical button {
-background: rgba(255,255,255,0.1);
-color: #ccc;
-}
-.dark-mode .nav-buttons-vertical button:hover {
-background: rgba(255,255,255,0.2);
-}
-#resultCount { font-size:11px; margin-top:4px; margin-bottom: 8px;
-color:#777; text-align:center;
-font-weight:500;
-}
-.dark-mode #resultCount {
-color: #aaa;
-}
-mark.highlight.current { background-color: #FFD700 !important;
-box-shadow: 0 0 10px rgba(255, 215, 0, 0.6);
-padding:1px 3px; border-radius:3px;
-font-weight: bold;
-}
-.dark-mode mark.highlight.current {
-background-color: #FFFF00 !important;
-box-shadow: 0 0 14px rgba(255, 255, 0, 0.7);
-color: #000 !important;
-}
-pre, code, .r-output, .r-output pre, .r-output code { border-radius:4px; padding:4px 6px; overflow-x:auto; white-space:pre-wrap; background-color:#fff; color:#000; transition: all 0.3s ease;
-}
-.dark-mode pre, .dark-mode code, .dark-mode .r-output, .dark-mode .r-output pre, .dark-mode .r-output code {
-background-color:transparent !important; color:#fff !important;
-}
-.r-output pre code::first-line { background-color:#fff; color:#000; font-weight:bold; }
-.theme-button-standalone {
-position: fixed !important;
-top: 295px;
-left: 20px;
-width:200px;
-padding:10px; font-size:14px; border:none;
-border-radius:10px;
-background:rgba(255,255,255,0.9); color:inherit; outline:none;
-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-backdrop-filter: blur(4px);
-cursor: pointer;
-z-index: 2000;
-}
-.theme-button-standalone:hover {
-transform: translateY(-2px);
-box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-background: rgba(255,255,255,0.95);
-}
-.dark-mode .theme-button-standalone {
-background: rgba(0,0,0,0.9);
-color: #fff;
-box-shadow: 0 2px 8px rgba(255,255,255,0.15);
-}
-.dark-mode .theme-button-standalone:hover {
-background: #000;
-box-shadow: 0 4px 12px rgba(255,255,255,0.2);
-}
-.font-size-controls {
-position: fixed;
-top: 355px;
-left: 20px;
-width: 200px;
-z-index: 2000;
-display: grid;
-grid-template-columns: 1fr 1fr 1fr;
-gap: 6px;
-}
-.font-control-button {
-padding: 8px;
-font-size: 12px;
-font-weight: 600;
-border: none;
-border-radius: 10px;
-background: rgba(255,255,255,0.9);
-color: inherit;
-outline: none;
-cursor: pointer;
-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-backdrop-filter: blur(4px);
-font-family: 'Segoe UI', system-ui, sans-serif;
-}
-.font-control-button:hover {
-transform: translateY(-2px);
-box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-background: rgba(255,255,255,0.95);
-}
-.dark-mode .font-control-button {
-background: rgba(0,0,0,0.9);
-color: #fff;
-box-shadow: 0 2px 8px rgba(255,255,255,0.15);
-}
-.dark-mode .font-control-button:hover {
-background: #000;
-box-shadow: 0 4px 12px rgba(255,255,255,0.2);
-}
-
-.code-collapse-controls {
-position: fixed;
-top: 415px;
-left: 20px;
-width: 200px;
-z-index: 2000;
-display: grid;
-grid-template-columns: 1fr;
-gap: 6px;
-}
-.code-control-button {
-padding: 12px 8px; 
-font-size: 11px; 
-font-weight: 600;
-border: none;
-border-radius: 10px;
-background: rgba(255,255,255,0.9);
-color: inherit;
-outline: none;
-cursor: pointer;
-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-backdrop-filter: blur(4px);
-font-family: 'Segoe UI', system-ui, sans-serif;
-min-height: 40px; 
-line-height: 1.2; 
-}
-.code-control-button:hover {
-transform: translateY(-2px);
-box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-background: rgba(255,255,255,0.95);
-}
-.dark-mode .code-control-button {
-background: rgba(0,0,0,0.9);
-color: #fff;
-box-shadow: 0 2px 8px rgba(255,255,255,0.15);
-}
-.dark-mode .code-control-button:hover {
-background: #000;
-box-shadow: 0 4px 12px rgba(255,255,255,0.2);
-}
-.code-collapsed {
-display: none !important;
-}
-.code-collapsed + .code-copy-button {
-display: none !important;
-}
-
-.dark-mode #references,
-.dark-mode .references,
-.dark-mode .quarto-appendix-bibliography {
-background-color: #000 !important;
-color: #fff !important;
-border: none !important;
-box-shadow: none !important;
-}
-
-.dark-mode #references a,
-.dark-mode .references a,
-.dark-mode .quarto-appendix-bibliography a {
-color: #66b2ff !important;
-text-decoration: underline;
-}
-
-.dark-mode #references li,
-.dark-mode .references li {
-background: transparent !important;
-color: #fff !important;
-}
-
-.dark-mode #references h2,
-.dark-mode .references h2,
-.dark-mode .quarto-appendix-bibliography h2 {
-color: #fff !important;
-}
-
-#references, .references, .quarto-appendix-bibliography {
-transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.dark-mode .r-output pre code::first-line {
-background-color: transparent !important;
-color: #fff !important;
-}
-</style>
+<style>.sidebar-search {position: fixed;top: 20px;left: 20px;width: 200px;font-family: 'Segoe UI', system-ui, sans-serif;font-size: 13px;background: transparent !important;box-shadow: none !important;border: none !important;padding: 0 !important;z-index: 1000;}.search-logo { text-align:center; margin-bottom:8px; }.search-logo img { max-width:100%; height:auto; display:block; margin:0 auto; transition: transform 0.2s ease-out, filter 0.2s ease-out; background: transparent; }.search-divider { border-top:1px solid #ddd; margin:8px 0; }.dark-mode .search-divider {border-color: #555;}.search-and-nav {display: flex;align-items: stretch;gap: 4px;margin-bottom: 6px;}#searchBox {flex: 1;padding:8px 10px; font-size:13px; border:none;border-radius:8px;background:rgba(255,255,255,0.9); color:inherit; outline:none;transition: all 0.2s ease;box-shadow: 0 2px 4px rgba(0,0,0,0.05);}.dark-mode #searchBox {background: rgba(0,0,0,0.3);}#searchBox:focus {box-shadow: 0 4px 8px rgba(0,0,0,0.1);}.nav-buttons-vertical {display: flex;flex-direction: column;gap: 2px;}.nav-buttons-vertical button {border:none; background:rgba(245,245,245,0.9); padding:4px 6px; font-size:10px; border-radius:4px; cursor:pointer; color:#555;transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);min-width: 28px;height: 22px;display: flex;align-items: center;justify-content: center;}.nav-buttons-vertical button:hover {background:#e0e0e0; transform: translateY(-1px);}.dark-mode .nav-buttons-vertical {background: transparent;}.dark-mode .nav-buttons-vertical button {background: rgba(255,255,255,0.1);color: #ccc;}.dark-mode .nav-buttons-vertical button:hover {background: rgba(255,255,255,0.2);}#resultCount { font-size:11px; margin-top:4px; margin-bottom: 8px;color:#777; text-align:center;font-weight:500;}.dark-mode #resultCount {color: #aaa;}mark.highlight.current { background-color: #FFD700 !important;box-shadow: 0 0 10px rgba(255, 215, 0, 0.6);padding:1px 3px; border-radius:3px;font-weight: bold;}.dark-mode mark.highlight.current {background-color: #FFFF00 !important;box-shadow: 0 0 14px rgba(255, 255, 0, 0.7);color: #000 !important;}pre, code, .r-output, .r-output pre, .r-output code { border-radius:4px; padding:4px 6px; overflow-x:auto; white-space:pre-wrap; background-color:#fff; color:#000; transition: all 0.3s ease;}.dark-mode pre, .dark-mode code, .dark-mode .r-output, .dark-mode .r-output pre, .dark-mode .r-output code {background-color:transparent !important; color:#fff !important;}.r-output pre code::first-line { background-color:#fff; color:#000; font-weight:bold; }.theme-button-standalone {position: fixed !important;top: 295px;left: 20px;width:200px;padding:10px; font-size:14px; border:none;border-radius:10px;background:rgba(255,255,255,0.9); color:inherit; outline:none;transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);box-shadow: 0 2px 8px rgba(0,0,0,0.15);backdrop-filter: blur(4px);cursor: pointer;z-index: 2000;}.theme-button-standalone:hover {transform: translateY(-2px);box-shadow: 0 4px 12px rgba(0,0,0,0.2);background: rgba(255,255,255,0.95);}.dark-mode .theme-button-standalone {background: rgba(0,0,0,0.9);color: #fff;box-shadow: 0 2px 8px rgba(255,255,255,0.15);}.dark-mode .theme-button-standalone:hover {background: #000;box-shadow: 0 4px 12px rgba(255,255,255,0.2);}.font-size-controls {position: fixed;top: 355px;left: 20px;width: 200px;z-index: 2000;display: grid;grid-template-columns: 1fr 1fr 1fr;gap: 6px;}.font-control-button {padding: 8px;font-size: 12px;font-weight: 600;border: none;border-radius: 10px;background: rgba(255,255,255,0.9);color: inherit;outline: none;cursor: pointer;transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);box-shadow: 0 2px 8px rgba(0,0,0,0.15);backdrop-filter: blur(4px);font-family: 'Segoe UI', system-ui, sans-serif;}.font-control-button:hover {transform: translateY(-2px);box-shadow: 0 4px 12px rgba(0,0,0,0.2);background: rgba(255,255,255,0.95);}.dark-mode .font-control-button {background: rgba(0,0,0,0.9);color: #fff;box-shadow: 0 2px 8px rgba(255,255,255,0.15);}.dark-mode .font-control-button:hover {background: #000;box-shadow: 0 4px 12px rgba(255,255,255,0.2);}.code-collapse-controls {position: fixed;top: 415px;left: 20px;width: 200px;z-index: 2000;display: grid;grid-template-columns: 1fr;gap: 6px;}.code-control-button {padding: 12px 8px; font-size: 11px; font-weight: 600;border: none;border-radius: 10px;background: rgba(255,255,255,0.9);color: inherit;outline: none;cursor: pointer;transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);box-shadow: 0 2px 8px rgba(0,0,0,0.15);backdrop-filter: blur(4px);font-family: 'Segoe UI', system-ui, sans-serif;min-height: 40px; line-height: 1.2; }.code-control-button:hover {transform: translateY(-2px);box-shadow: 0 4px 12px rgba(0,0,0,0.2);background: rgba(255,255,255,0.95);}.dark-mode .code-control-button {background: rgba(0,0,0,0.9);color: #fff;box-shadow: 0 2px 8px rgba(255,255,255,0.15);}.dark-mode .code-control-button:hover {background: #000;box-shadow: 0 4px 12px rgba(255,255,255,0.2);}.code-collapsed {display: none !important;}.code-collapsed + .code-copy-button {display: none !important;}.dark-mode #references,.dark-mode .references,.dark-mode .quarto-appendix-bibliography {background-color: #000 !important;color: #fff !important;border: none !important;box-shadow: none !important;}.dark-mode #references a,.dark-mode .references a,.dark-mode .quarto-appendix-bibliography a {color: #66b2ff !important;text-decoration: underline;}.dark-mode #references li,.dark-mode .references li {background: transparent !important;color: #fff !important;}.dark-mode #references h2,.dark-mode .references h2,.dark-mode .quarto-appendix-bibliography h2 {color: #fff !important;}#references, .references, .quarto-appendix-bibliography {transition: background-color 0.3s ease, color 0.3s ease;}.dark-mode .r-output pre code::first-line {background-color: transparent !important;color: #fff !important;}</style>
 
 
 
